# pitchProphet

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
costomFPL/config/: dataVars.yaml
costomFPL/data/: fbref_scrapper.py  scrapper.py
costomFPL/data/fbref/: fbref_scrapper.py
costomFPL/data/football_data/: football_data.md
costomFPL/data/football_data_uk/: football_data.md
costomFPL/data/pre_processing/: pre_process.py  stats.py
costomFPL/models/: xgb_model.pkl
costomFPL/models/notebook/: model_classic.ipynb
pitchProphet/config/: config.yaml  pre_process_vars.yaml
pitchProphet/data/EDA/: data-visual.ipynb
pitchProphet/data/fbref/: fbref_scrapper.py  fbref_variables.md
pitchProphet/data/football_data_uk/: football_data.md
pitchProphet/data/match_dates/: matchweek_dates_2024_2025.csv
pitchProphet/data/pre_processing/: calculate_stats.py  load_data.py  pre_process.py  process.py
pitchProphet/models/: xgb_model.pkl
pitchProphet/models/notebook/: model_classic.ipynb  model_classic_1.ipynb
pitchProphet/scripts/: inference.py  update_prediction.sh  update_predictions.sh
pitchProphet/utils/: matchweek_date.py
tests/: test_prediction.py  test_scrapper.py
tests/data/fbref/: test_fbref_scrapper.py
tests/data/pre_processing/: test_load_data.py  test_process.py
tests/scripts/: test_inference.py
web/: app.py  utils.py
web/app/: make_table.py
web/script/: make_table.py
web/static/assets/img/: output.txt
web/static/assets/tables/: Bundesliga_week_16_predictions.csv  Bundesliga_week_19_predictions.csv  Bundesliga_week_20_predictions.csv  La-Liga_week_18_predictions.csv  La-Liga_week_21_predictions.csv  La-Liga_week_22_predictions.csv  Premier-League_week_10_predictions.csv  Premier-League_week_19_predictions.csv  Premier-League_week_20_predictions.csv  Premier-League_week_22_predictions.csv  Premier-League_week_23_predictions.csv  Premier-League_week_24_predictions.csv  Serie-A_week_18_predictions.csv  Serie-A_week_19_predictions.csv  Serie-A_week_22_predictions.csv  Serie-A_week_23_predictions.csv
web/static/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  templatemo-style.css
web/templates/: index.html  index_temp.html
web/utils/: utils.py
