[tool.poetry]
name = "pitchProphet"
version = "0.1.0"
description = ""
package-mode = false  
authors = ["6076paras <47757847+6076paras@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
get-data = "pitchProphet.data.fbref.fbref_scrapper:main"
pre-process = "pitchProphet.data.pre_processing.pre_process:main" 
inference-data = "pitchProphet.scripts.inference:main"  

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
lxml = "^5.3.0"
h5py = "^3.12.1"
jupyter = "^1.1.1"
lab = "^8.3"
tables = "^3.10.1"
scikit-learn = "^1.5.2"
pytest = "^8.3.4"
xgboost = "^2.1.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
monkeytype = "^23.3.0"
flask = "^3.1.0"
isort = "^5.13.2"
nbqa = "^1.9.1"
nbstripout = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
